Added Shop, Forgotten Hall, Pure Fiction and Apocalyptic Shadow reset notification and reminders when you turn on Honkai: Star Rail

--- a/settings.env
+++ b/settings.env
@@ -6,9 +6,24 @@ tts = False # Adds additional text to speech notification when notification is b
 
 trailblaze_not = True # Trailblaze power notifications
 trailblaze_milestone = False # Notification if trailblaze power hits values specified below
-trailblaze_milestones = "20, 40, 60, 80, 100, 120, 140, 160" # Values are separated using ", "
+trailblaze_milestones = "20, 40, 60, 80, 100, 120, 140, 160, 180, 200, 220" # Values are separated using ", "
 
 assignments_not = True # Assignment end notification
 
 daily_check_in = True # Collect daily check-in reward automaticlly
 daily_not = True # Notification when daily check-in reward is collected
+
+shop_not = True # Shop reset notification
+server = "eu" # Accepted values "eu, us, as"
+
+hall_not = True # Forgotten Hall reset notification
+pf_not = True # Pure Fiction reset notification
+apocalyptic_not = True # Apocalyptic Shadow reset notification
+
+reminder = True # Additional reminders when you turn on the game (Reminders won't work if it's set to False)
+reminder_time = 60 # How often to check if the game is opened, in seconds (It's cpu heavy so it's recommended to not set it to low!)
+reminder_additional_delay = 30 # Add additional delay to reminders after starting the game, in seconds (0 to turn it off)
+reminder_shop = True # Reminds you that Shop has be reset when you start up Honkai: Star Rail
+reminder_hall = True # Reminds you that Forgotten Hall has be reset when you start up Honkai: Star Rail
+reminder_pf = True # Reminds you that Pure Fiction has be reset when you start up Honkai: Star Rail
+reminder_apocalyptic = True # Reminds you that Apocalyptic Shadow has be reset when you start up Honkai: Star Rail
