Rewrote an entire project to use `win11toast` instead of `win10toast` and added `trailblaze_milestones_margin`, more information in `settings.env`

--- a/settings.env
+++ b/settings.env
@@ -7,6 +7,7 @@ tts = False # Adds additional text to speech notification when notification is b
 trailblaze_not = True # Trailblaze power notifications
 trailblaze_milestone = False # Notification if trailblaze power hits values specified below
 trailblaze_milestones = "20, 40, 60, 80, 100, 120, 140, 160, 180, 200, 220" # Values are separated using ", "
+trailblaze_milestones_margin = 5 # How much more trailblaze power can you have than the milestone and still get a notification for example, if milestones contain 80 and you have 86 trailblaze power, you will still get a notification about the milestone being reached
 
 assignments_not = True # Assignment end notification
 
